<resources>
    <string name="app_name">World Weather</string>

    <string name="title_detailed_weather">Weather Details</string>
    <string name="title_map">Weather Map</string>

    <string name="APPID" translatable="false">d0c7945e3b5cf2f90386901ed2fad2a2</string>
    <string name="baseUrlForecast" translatable="false">https://api.openweathermap.org</string>
    <string name="baseUrlForecastMap" translatable="false">https://tile.openweathermap.org/map/%s/%d/%d/%d.png?appid=%s</string>

    <string name="units" translatable="false">units</string>
    <string name="lang" translatable="false">lang</string>
    <string name="metric_units" translatable="false">metric</string>
    <string name="imperial_units" translatable="false">imperial</string>
    <string name="keywords" translatable="false">q</string>
    <string name="default_keywords" translatable="false">Cherkasy</string>


    <string name="temperature_desc">Temperature: %1$10.2f %2$s</string>
    <string name="pressure_desc">Pressure: %1$10.2f hPa</string>
    <string name="humidity_desc">Humidity: %1$10.2f%%</string>
    <string name="main_info_desc">Temperature: %1$10.2f %2$s%n%nMinimal temperature: %3$10.2f %2$s%n%nMaximal temperature: %4$10.2f %2$s%n%nPressure: %5$10.2f hPa%n%nSea level pressure: %6$10.2f hPa%n%nGround level pressure: %7$10.2f hPa%n%nHumidity: %8$10.2f%%</string>
    <string name="wind_desc">Wind</string>
    <string name="wind_data">Speed, %1$s: %2$10.2f%n%nDirection: %3$d degrees (%4$s)</string>
    <string name="clouds_desc">Cloudiness, %</string>
    <string name="rain_desc">Rain volume for last 3 hours, mm</string>
    <string name="snow_desc">Snow volume for last 3 hours</string>

    <string name="imperial_speed_unit">miles/hour</string>
    <string name="metric_speed_unit">meter/sec</string>


    <string name="NNE">NNE</string>
    <string name="NE">NE</string>
    <string name="ENE">ENE</string>
    <string name="E">E</string>
    <string name="ESE">ESE</string>
    <string name="SE">SE</string>
    <string name="SSE">SSE</string>
    <string name="S">S</string>
    <string name="SSW">SSW</string>
    <string name="SW">SW</string>
    <string name="WSW">WSW</string>
    <string name="W">W</string>
    <string name="WNW">WNW</string>
    <string name="NW">NW</string>
    <string name="NNW">NNW</string>
    <string name="N">N</string>


    <string name="settings_enter_sity">Enter city and country code:</string>
    <string name="settings_city_country">City,country code</string>
    <string name="settings_units">Measurement units</string>
    <string name="settings_standard_unit">Standard</string>
    <string name="settings_metric_unit">Metric</string>
    <string name="settings_imperial_unit">Imperial</string>
    <string name="settings_name">Settings</string>
    <string name="check_for_new_weather_every_2_hous">Check for new weather every 2 hous</string>
    <string name="service_scheduler">Service scheduler</string>


    <string name="map_layer_default_value" translatable="false">clouds_new</string>
    <string name="map_layer_clouds">Clouds</string>
    <string name="map_layer_precipitation">Precipitation</string>
    <string name="map_layer_wind">Wind</string>
    <string name="map_layer_pressure">Pressure</string>
    <string name="map_layer_temperature">Temperature</string>


    <string name="no_network_connection">No network connection</string>
    <string name="no_url_or_broken">On requested URL found nothing or response is not correct</string>
    <string name="server_error_500">500: Internal server error</string>
    <string name="unknown_error">Any happened. Error code %1$d</string>
    <string name="programm_error">Request was successful. There are any problems in your app</string>
    <string name="error">Error!</string>
    <string name="actionbar_subtilte_on_no_internet">no internet…</string>


</resources>
