<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".SettingsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_enter_sity"
        android:textSize="@dimen/text_size_default"
        android:textStyle="bold"
        android:textAlignment="center" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <AutoCompleteTextView
        android:id="@+id/keywords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/settings_city_country"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:text="@string/settings_units"
        android:textSize="@dimen/text_size_default"
        android:textStyle="bold"
        android:textAlignment="center" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <RadioGroup
        android:id="@+id/units"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:paddingTop="8dp">

        <RadioButton
            android:id="@+id/standard"
            android:tag="standard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/settings_standard_unit" />

        <RadioButton
            android:id="@+id/metric"
            android:tag="metric"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_metric_unit" />

        <RadioButton
            android:id="@+id/imperial"
            android:tag="imperial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_imperial_unit" />

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:text="@string/service_scheduler"
        android:textSize="@dimen/text_size_default"
        android:textStyle="bold"
        android:textAlignment="center" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <CheckBox
        android:id="@+id/scheduler_checker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:text="@string/check_for_new_weather_every_2_hous" />

</LinearLayout>