<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default">

        <TextView
            android:id="@+id/tv_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bg"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_default"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/margin_default"
            app:layout_constraintBottom_toTopOf="@id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="1" />

        <LinearLayout
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bg"
            android:gravity="center_vertical|center_horizontal"
            android:layout_marginBottom="@dimen/margin_default"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/main_info"
            app:layout_constraintDimensionRatio="1.1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_data">

            <TextView
                android:id="@+id/weather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_default"/>

            <ImageView
                android:id="@+id/image_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:id="@+id/main_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bg"
            android:layout_marginBottom="@dimen/margin_default"
            android:textSize="@dimen/text_size_default"
            app:layout_constraintBottom_toTopOf="@+id/detailed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view"
            app:layout_constraintVertical_weight="3" />

        <LinearLayout
            android:id="@+id/detailed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_info"
            app:layout_constraintVertical_weight="7" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/rounded_bg"
                android:layout_marginBottom="@dimen/margin_default">

                <TextView
                    android:id="@+id/title_wind"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/wind_desc"
                    android:gravity="center_vertical"
                    android:textAlignment="gravity"
                    android:layout_marginEnd="@dimen/margin_default"
                    android:textSize="@dimen/text_size_default"/>

                <TextView
                    android:id="@+id/wind"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textAlignment="gravity"
                    android:textSize="@dimen/text_size_default"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/rounded_bg"
                android:layout_marginBottom="@dimen/margin_default">

                <TextView
                    android:id="@+id/title_clouds"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textAlignment="gravity"
                    android:layout_marginEnd="@dimen/margin_default"
                    android:text="@string/clouds_desc"
                    android:textSize="@dimen/text_size_default"/>

                <TextView
                    android:id="@+id/clouds"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textAlignment="gravity"
                    android:textSize="@dimen/text_size_default"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/rounded_bg"
                android:layout_marginBottom="@dimen/margin_default">

                <TextView
                    android:id="@+id/title_rain"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textAlignment="gravity"
                    android:layout_marginEnd="@dimen/margin_default"
                    android:text="@string/rain_desc"
                    android:textSize="@dimen/text_size_default"/>

                <TextView
                    android:id="@+id/rain"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textAlignment="gravity"
                    android:textSize="@dimen/text_size_default"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/rounded_bg"
                android:layout_marginBottom="@dimen/margin_default">

                <TextView
                    android:id="@+id/title_snow"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textAlignment="gravity"
                    android:layout_marginEnd="@dimen/margin_default"
                    android:text="@string/snow_desc"
                    android:textSize="@dimen/text_size_default"/>

                <TextView
                    android:id="@+id/snow"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textAlignment="gravity"
                    android:textSize="@dimen/text_size_default"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>